k8s/services/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-service
spec:
  selector:
    app: product-service
  ports:
  - port: 8000
    targetPort: 8000
