k8s/services/product-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service
  namespace: product-service
  labels:
    name: product-service
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: ecom.neerajbabu.tech
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external-nginx
  rules:
  - host: "ecomm.neerajbabu.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: product-service
            port: 
              number: 8000
